<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:windowSoftInputMode="adjustResize"
    tools:context=".view.SessionActivity">

    <TextView
        android:id="@+id/sessionActivityTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:text="@string/session_activity"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sessionStatusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        android:text="@string/session_status_not_started"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
        app:layout_constraintTop_toBottomOf="@+id/sessionActivityTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/sessionUserDisplayRV"
        android:layout_width="329dp"
        android:layout_height="347dp"
        app:layout_constraintBottom_toTopOf="@+id/startStopSessionBTN"
        app:layout_constraintEnd_toEndOf="@+id/sessionStatusTextView"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/sessionStatusTextView"
        app:layout_constraintTop_toBottomOf="@+id/sessionStatusTextView"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/startStopSessionBTN"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="584dp"
        android:text="@string/start_session_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
        app:layout_constraintTop_toBottomOf="@+id/sessionActivityTextView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/editUserBTN"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:text="@string/edit_preset_text"
        app:layout_constraintBottom_toTopOf="@+id/startStopSessionBTN"
        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
        app:layout_constraintTop_toBottomOf="@+id/sessionUserDisplayRV"
        app:layout_constraintVertical_bias="0.449" />

    <Button
        android:id="@+id/addUserBTN"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:text="@string/add_preset_text"
        app:layout_constraintBottom_toTopOf="@+id/startStopSessionBTN"
        app:layout_constraintEnd_toEndOf="@+id/sessionActivityTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sessionActivityTextView"
        app:layout_constraintTop_toBottomOf="@+id/sessionUserDisplayRV"
        app:layout_constraintVertical_bias="0.449" />
</androidx.constraintlayout.widget.ConstraintLayout>